--- a/Index.html
+++ b/Index.html
@@ -21,6 +21,8 @@
       I’m a BSc Computers graduate with hands-on experience in web development using HTML, CSS, and JavaScript. I love learning new technologies and building cool projects.
     </p>
     <a href="resume.pdf" download class="resume-btn">Download My Resume (PDF)</a>
+    <a href="resume.pdf" class="resume-btn" download>Download Resume</a>
+    <a href="resume.pdf" class="resume-btn" target="_blank">View Resume</a>
   </section>
 
   <section class="skills fade-in">
