--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <!-- Dark Mode Toggle will appear here via JS -->
 
   <header>
+    <h1 id="typing-text"></h1>
     <h1>Thothadi Koteswara Rao</h1>
     <p>Aspiring AI Executive | Web Developer</p>
   </header>
